# task-tracker

./: .dockerignore  .gitignore  books_router.py  database.py  docker-compose.yaml  main.py  pyproject.toml  readme.md  repository.py  requirements.txt  router.py  schemas.py  tasks.db  users_router.py
api/: auth.py  tasks.py  users.py
app/: dockerfile  main.py  pyproject.toml  requirements.txt
app/dependencies/: services.py
app/models/: __init__.py  users.py
app/repositories/: __init__.py
app/services/: tasks.py  users.py
db/: __init__.py  db.py  session.py  tasks.py  users.py
dependencies/: __init__.py  common.py
infrasctructure/: http_client.py
models/: __init__.py  tasks.py  users.py
repositories/: __init__.py  sqlalchemy_tasks.py  sqlalchemy_users.py  tasks.py  users.py
schemas/: __init__.py  tasks.py  users.py
services/: __init__.py
tests/: test_api.py
