[tool.poetry]
name = "task-tracker"
version = "0.1.0"
description = ""
authors = ["sonnya <sofi.kravchenko@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiosqlite = "0.21.0"
annotated-types = "0.7.0"
anyio = "4.9.0"
certifi = "2025.1.31"
click = "8.1.8"
colorama = "0.4.6"
exceptiongroup = "1.2.2"
fastapi = "0.115.12"
greenlet = "3.1.1"
h11 = "0.14.0"
httpcore = "1.0.8"
httpx = "0.28.1"
idna = "3.10"
iniconfig = "2.1.0"
packaging = "24.2"
pluggy = "1.5.0"
pydantic = "2.11.3"
pydantic-core = "2.33.1"
pytest = "8.3.5"
pytest-asyncio = "0.26.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.40"
starlette = "0.46.1"
tomli = "2.2.1"
typing-inspection = "0.4.0"
typing-extensions = "4.13.2"
uvicorn = "0.34.0"
prometheus-client = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
